--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -1,16 +1,24 @@
 .duration-container {
     border: 1px dotted black;
-    border-radius: 5%;
-    background-color: white;
+    background-color: rgb(244, 252, 255);
     margin: 0.5rem;
     font-size: 1rem;
     margin: 0.5rem;
+    margin-bottom: 1.5rem;
     padding: 0.5rem 2rem;
+    width: 20vw;
+    text-align: center;
 }
 
 .duration-input {
     border: none;
     width: 40px;
+    background-color: rgb(244, 252, 255);
+}
+
+.duration-input::-webkit-inner-spin-button,
+.duration-input::-webkit-outer-spin-button {
+    opacity: 1;
 }
 
 .form {
@@ -24,7 +32,7 @@
     align-items: center;
     align-content: center;
     font-size: 1.5rem;
-    width: 25vw;
+    width: 40vw;
     -webkit-box-shadow: inset 0px 0px 50px -33px rgba(0, 107, 153, 1);
     -moz-box-shadow: inset 0px 0px 50px -33px rgba(0, 107, 153, 1);
     box-shadow: inset 0px 0px 50px -33px rgb(6, 180, 255);
@@ -33,6 +41,39 @@
 .input {
     border: 1px dotted black;
     margin: 0.5rem;
+    margin-bottom: 1.5rem;
     padding: 0.5rem;
-    width: 15vw;
+    width: 20vw;
+    background-color: rgb(252, 254, 255);
 }
+
+.spice {
+    margin-top: 1rem;
+}
+
+.button {
+    background-color: rgb(255, 231, 235);
+    border: 1px dotted black;
+    cursor: pointer;
+    padding: 0.5rem 2rem;
+    font-weight: bold;
+    font-size: 0.9rem;
+    color: rgb(52, 67, 89);
+    margin: 0.5rem;
+    width: 10vw;
+}
+
+
+@media only screen and (max-width: 1000px) {
+    .form {
+      width: 80vw;
+    }
+
+    .input, .duration-container {
+        width: 50vw;
+    }
+
+    .button {
+        width: 40vw;
+    }
+  }
